# linux-hunter-rs

./: .gitignore  Cargo.toml  README.md  justfile
src/: conf.rs  err.rs  lib.rs  main.rs  memory.rs  ui.rs
src/memory/: browser.rs  mod.rs  pattern.rs  region.rs  scraper.rs  update.rs
src/mhw/: data.rs  mod.rs  monster.rs  offsets.rs  ui_data.rs
src/ui/: mod.rs  monster.rs  player.rs
