[package]
name = "linux-rhunter"
version = "0.1.0"
edition = "2021"


[lib]
name = "linux_rhunter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
backtrace = { version = "0.3.74", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "string"] }
nix = { version = "0.29.0", features = ["process", "fs"] }
serde = { version = "1.0.215", features = ["derive"] }
