[package]
name = "linux-hunter-rs"
version = "0.1.0"
edition = "2021"


[lib]
name = "linux_hunter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
backtrace = { version = "0.3.74", features = ["serde"], optional = true }
clap = { version = "4.5.23", features = ["derive", "string"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"
nix = { version = "0.29.0", features = ["process", "fs"] }
nom = "7.1.3"
ratatui = "0.29.0"
serde = { version = "1.0.216", features = ["derive"] }
sscanf = "0.4.2"

[features]
backtrace = ["dep:backtrace"]
