[package]
name = "linux-hunter-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "linux_hunter_lib"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.26", features = ["derive", "string"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"
dirs = "6.0.0"
lazy_static = "1.5.0"
memchr = "2.7.4"
nix = { version = "0.29.0", features = ["process", "uio"] }
nom = "7.1.3"
ratatui = "0.29.0"
serde = { version = "1.0.216", features = ["derive"] }
sscanf = "0.4.2"
sysinfo = "0.33.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# same as default, but with aggressive optimizations, since otherwise we take about 1m30s to search for the data 
[profile.dev]
opt-level = 3
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "unwind"
strip = true
